<resources>
    <string name="app_name">Thirty</string>
    <string name="throw_button">Throw</string>
    <string name="dropdown_text_low">Low</string>
    <string name="dropdown_text_4">Four</string>
    <string name="dropdown_text_5">Five</string>
    <string name="dropdown_text_6">Six</string>
    <string name="dropdown_text_7">Seven</string>
    <string name="dropdown_text_8">Eight</string>
    <string name="dropdown_text_9">Nine</string>
    <string name="dropdown_text_10">Ten</string>
    <string name="dropdown_text_11">Eleven</string>
    <string name="dropdown_text_12">Twelve</string>
    <string name="currentRoundLabel">Current round:</string>
    <string name="numberOfRethrowsLabel">Throws left:</string>
    <string name="currentScoreLabel">Current score:</string>
    <string name="scoreRoundOne">R1 score:</string>
    <string name="scoreRoundTwo">R2 score:</string>
    <string name="scoreRoundThree">R3 score:</string>
    <string name="scoreRoundFour">R4 score:</string>
    <string name="scoreRoundFive">R5 score:</string>
    <string name="scoreRoundSix">R6 score:</string>
    <string name="scoreRoundSeven">R7 score:</string>
    <string name="scoreRoundEight">R8 score:</string>
    <string name="scoreRoundNine">R9 score:</string>
    <string name="scoreRoundTen">R10 score:</string>
    <string name="finalScore">Total score:</string>
    <string name="playAgainButString">Play again</string>
    <string name="newRoundToast">New round!</string>
    <string name="nextRoundButton">Next round</string>
    <string name="noRoundsPlayedToast">No rounds has been played!</string>
    <string name="scoreRuleText">Score rule:</string>
    <string name="oneDiceScore">One dice score:</string>
    <string name="twoDiceScore">Two dice score:</string>
    <string name="threeDiceScore">Three dice score:</string>
    <string name="fourDiceScore">Four dice score:</string>
    <string name="fiveDiceScore">Five dice score:</string>
    <string name="sixDiceScore">Six dice score:</string>
</resources>
